# ROLLER

./: .clang-format  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  ROLLER.vcxproj  ROLLER.vcxproj.filters  build.zig  build.zig.zon  hk.pkl  mise.toml  resource.h
.github/ISSUE_TEMPLATE/: crash.md
.github/workflows/: README.md  build-installer.yml  build.yml  ci.yml  nightly-build.yml  test-installer.yml
PROJECTS/ROLLER/: 3d.c  3d.h  build_info_default.h  building.c  building.h  car.c  car.h  carplans.c  carplans.h  cdx.c  cdx.h  colision.c  colision.h  comms.c  comms.h  control.c  control.h  crashdump.c  crashdump.h  crashdump_stub.c  crt_filter.c  crt_filter.h  crt_shaders.h  debug_overlay.c  debug_overlay.h  debug_overlay_shaders.h  debug_overlay_stub.c  drawtrk3.c  drawtrk3.h  engines.c  engines.h  frontend.c  frontend.h  frontend_config.c  frontend_data.c  frontend_lobby.c  frontend_network.c  frontend_pause.c  frontend_screens.c  frontend_select.c  (+107 more)
PROJECTS/ROLLER/shaders/: compile_shaders.sh  crt_pixel.hlsl  crt_vertex.hlsl  crt_vga_pixel.hlsl  game_car_pixel.hlsl  game_car_vertex.hlsl  game_hud_pixel.hlsl  game_hud_vertex.hlsl  game_particle_pixel.hlsl  game_particle_tex_pixel.hlsl  game_particle_tex_vertex.hlsl  game_particle_vertex.hlsl  game_scene_pixel.hlsl  game_scene_pixel_blend.hlsl  game_scene_sign_pixel.hlsl  game_scene_track_darken_pixel.hlsl  game_scene_vertex.hlsl  menu_mesh_pixel.hlsl  menu_mesh_vertex.hlsl  menu_pixel.hlsl  menu_vertex.hlsl  overlay_pixel.hlsl  overlay_vertex.hlsl
PROJECTS/ROLLER/shaders/compiled/: crt_pixel.msl  crt_pixel.spv  crt_vertex.msl  crt_vga_pixel.msl  crt_vga_pixel.spv  game_car_pixel.msl  game_car_pixel.spv  game_car_vertex.msl  game_car_vertex.spv  game_hud_pixel.msl  game_hud_pixel.spv  game_hud_vertex.msl  game_hud_vertex.spv  game_particle_pixel.spv  game_particle_tex_pixel.msl  game_particle_tex_pixel.spv  game_scene_pixel.msl  game_scene_pixel.spv  game_scene_pixel_blend.msl  game_scene_pixel_blend.spv  game_scene_sign_pixel.msl  game_scene_sign_pixel.spv  game_scene_track_darken_pixel.msl  game_scene_track_darken_pixel.spv  game_scene_vertex.msl  game_scene_vertex.spv  (+12 more)
android/: gradle.properties  settings.gradle
android/app/: build.gradle
docs/adr/: 0001-rendering-snapshot-tests.md
docs/agents/: domain.md
docs/plans/: 2026-03-20-game-render-design.md  2026-03-20-game-render-plan.md  2026-05-07-rendering-snapshot-tests-design.md
docs/prds/: 2026-05-06-game-render-deepening.md
installer/: .gitignore  INSTALLER_PHASE_1.md  INSTALLER_PLAN.md  README.md  main.py  pyproject.toml
installer/assets/: .gitkeep
installer/assets/templates/: .gitkeep  FATAL.INI  config.ini
installer/roller_installer/: __init__.py  __main__.py
installer/roller_installer/cli/: commands.py
installer/roller_installer/core/: __init__.py
installer/roller_installer/gui/: __init__.py
installer/roller_installer/tui/: __init__.py
installer/roller_installer/utils/: __init__.py
installer/scripts/: .gitkeep
installer/tests/: __init__.py
mise-tasks/: link-worktree-data  snap-diff
scripts/: build.py  fetch_demo_assets.py  finalize_web_bundle.py  install_emsdk.py
tests/: phone_ui_test.c  render_queue_3d_test.c  scene_render_seam_check.py  test_fetch_demo_assets.py  test_finalize_web_bundle.py  wasm_tick_clock_test.c  web_default_config_test.c  web_gamepad_axis_test.c
tests/snapshots/: README.md
tools/: check_render_queue_3d_seams.py  snapshot_walker.zig
tools/shadercross/: build.zig  build.zig.zon
web/: _headers  roller-shell.js  shell.html
(+3 files in other folders)
