[project]
name = "roller-installer"
version = "0.0.1"
description = "Installer for ROLLER"
authors = [
    {name = "Simon Hartcher",email = "simon@simonhartcher.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.17.3,<0.18.0)",
    "pygithub (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
